--- a/task4/back-end/Dockerfile
+++ b/task4/back-end/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get upgrade -y
 
 # Install Python3, Python3-pip, and Flask
 RUN apt-get install -y python3 python3-pip
-RUN pip3 install flask flask-cors
+RUN pip3 install flask
+RUN pip3 install flask-cors
 
 # Set the working directory
 WORKDIR /app
